syntax = "proto3";

package proto.dm.kendaql;
option go_package = "gitlab.kenda.com.tw/kenda/commons/v2/proto/golang/dm/kendaql";

enum DataType {
  DATA_TYPE_UNSPECIFIED = 0;
  BOOL                  = 1;
  STRING                = 2;
  BYTES                 = 3;
  INT                   = 4;
  INT8                  = 5;
  INT16                 = 6;
  INT32                 = 7;
  INT64                 = 8;
  FLOAT32               = 9;
  FLOAT64               = 10;
  TIME                  = 11;
}
